<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<artifactId>AMICoreJava</artifactId>

	<parent>
		<groupId>net.hep.ami</groupId>
		<artifactId>AMICore</artifactId>
		<version>1.0.0</version>
		<relativePath>..</relativePath>
	</parent>

	<packaging>jar</packaging>

	<name>AMICoreJava</name>
	<description>AMI JAVA core</description>
	<url>http://www.cern.ch/ami/</url>

	<properties>
		<antlr4.visitor>false</antlr4.visitor>
		<antlr4.listener>false</antlr4.listener>

		<junit.jupiter.version>5.3.2</junit.jupiter.version>
	</properties>

	<dependencies>
		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<!--*********************************************************************************************************-->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>

		<!--*********************************************************************************************************-->
	</dependencies>

	<build>

		<plugins>
			<!--*****************************************************************************************************-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<!--*****************************************************************************************************-->

			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.10.1</version>

				<executions>
					<execution>
						<id>antlr4</id>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<outputDirectory>${project.build.directory}/antlr4</outputDirectory>
				</configuration>

			</plugin>

			<!--*****************************************************************************************************-->

			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>3.0.1</version>

				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<format>properties</format>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.tags$</includeOnlyProperty>
						<includeOnlyProperty>^git.build.version$</includeOnlyProperty>
						<includeOnlyProperty>^git.branch$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
						<includeOnlyProperty>^git.remote.origin.url$</includeOnlyProperty>
					</includeOnlyProperties>
				</configuration>

			</plugin>

			<!--*****************************************************************************************************-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>

			<!--*****************************************************************************************************-->
		</plugins>

	</build>

</project>
